define(AI_VERSION_MAJOR, 0)
define(AI_VERSION_MINOR, 0)
define(AI_VERSION_REVISION, 0)

define(AI_PACKAGE_NAME, [http_server])
define(AI_BUGREPORT, [carlo@alinoe.com])

AC_INIT(AI_PACKAGE_NAME, AI_VERSION_MAJOR.AI_VERSION_MINOR.AI_VERSION_REVISION, AI_BUGREPORT)
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([autogen.sh])
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AC_PROG_CC
AC_PROG_CXX
PKG_CHECK_MODULES([LIBCURL], [libcurl])
DEFS="-DHAVE_CONFIG_H"
AC_SUBST(DEFS)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
